generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["extendedWhereUnique", "tracing"]
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider     = "postgresql"
  url          = env("DATABASE_URL")
  relationMode = "prisma"
}

model Todo {
  id          BigInt    @id @default(autoincrement()) @db.BigInt
  authorId    BigInt
  uuid        String    @unique @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  name        String
  description String
  status      Status    @default(NOT_STARTED)
  priority    Priority  @default(P2)
  tags        String[]  @default([])
  dueAt       DateTime  @db.Timestamptz
  createdAt   DateTime  @default(now()) @db.Timestamptz
  updatedAt   DateTime? @updatedAt @db.Timestamptz
  author      User      @relation(fields: [authorId], references: [id])

  @@index([authorId])
}

model User {
  id         BigInt     @id @default(autoincrement()) @db.BigInt
  uuid       String     @unique @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  email      String     @unique @db.VarChar
  password   String     @db.VarChar
  roles      Role[]     @default([USER])
  createdAt  DateTime   @default(now()) @db.Timestamptz
  updatedAt  DateTime?  @updatedAt @db.Timestamptz
  todos      Todo[]
  activities Activity[]
}

model Activity {
  id            BigInt    @id @default(autoincrement()) @db.BigInt
  uuid          String    @unique @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  actorId       BigInt
  model         Model
  action        Action
  beforePayload Json?     @default("{}")
  afterPayload  Json?     @default("{}")
  createdAt     DateTime  @default(now()) @db.Timestamptz
  updatedAt     DateTime? @updatedAt @db.Timestamptz
  actor         User      @relation(fields: [actorId], references: [id])

  @@index([actorId])
}

enum Status {
  NOT_STARTED
  IN_PROGRESS
  COMPLETED
}

enum Priority {
  P4
  P3
  P2
  P1
  P0
}

enum Role {
  ADMIN
  USER
  READONLY_USER
}

enum Model {
  Todo
  User
}

enum Action {
  CREATE
  UPDATE
  DELETE
}
